--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@
 # Ignore app_keys.rb
 /config/initializers/app_keys.rb
 /config/credentials/production.key
+
+# Ignore secret key
+/config/credentials/secret_key_base.key
